--- a/GoogleCloudPricingCalculatorTest/GoogleCloudPricingCalculatorTest.csproj
+++ b/GoogleCloudPricingCalculatorTest/GoogleCloudPricingCalculatorTest.csproj
@@ -18,8 +18,6 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="115.0.5790.10200" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Configuration.ConfigurationBuilders.Environment" Version="3.0.0" />
@@ -27,6 +25,14 @@
     <PackageReference Include="Microsoft.Build.Framework" Version="17.6.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="Microsoft.Edge.SeleniumTools" Version="3.141.3" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="114.0.5735.9000" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Serilog" Version="3.0.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,9 +42,7 @@
     <None Remove="Model\" />
     <None Remove="Service\" />
     <None Remove="TestData\" />
-    <None Remove="log4net.config" />
     <None Remove=".DS_Store" />
-    <None Remove="TestResult.runsettings" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tests\" />
@@ -47,11 +51,5 @@
     <Folder Include="Model\" />
     <Folder Include="Service\" />
     <Folder Include="TestData\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="log4net.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TestResult.runsettings" />
   </ItemGroup>
 </Project>
